[package]
name = "rdspy"
version = "1.0.2"
edition = "2024"
authors = ["Chris Mumford <cmumford@cmumford.com>"]
description = "A library for reading logs created by RDS Spy."
readme = "README.md"
keywords = ["RDS", "spy", "radio"]
license = "MIT"

[dependencies]
chrono = "0.4.44"
log = "0.4.29"
walkdir = "2.5.0"

[[example]]
name = "sample"
path = "example/sample.rs"
